src/test/ui/llvm-asm/issue-23458.stderr
error: invalid operand in inline asm: 'int $3'
  --> $DIR/issue-23458.rs:9:9
   |
LL |         llvm_asm!("int $3");
   |         ^

error: too few operands for instruction
  --> $DIR/issue-23458.rs:9:9
   |
LL |         llvm_asm!("int $3");
   |         ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     int 
   |     ^

error: aborting due to 2 previous errors

